@@ -1,0 +1,2 @@
+1
+drink/X   [VERB]
